DisColorFull/DisColorFull.theme.css
/**
* @name DisColorFull SVG
* @author Zacam
* @version 1.4.5
* @description Fills in Discords bland SVG's with Color || Inspired by @NYRI4's `Discolored' Theme
* @authorId 94933455258783744
* @source https://github.com/Zacam/BetterDiscord/tree/main/DisColorFull
*/

/* Main Titlebar */
 /* Inbox */
.toolbar__9293f .buttons_8227b0 > .clickable_c99c29 svg, /* Old Title Bar */
.trailing_c38106 > .clickable_c99c29 svg {
	background-image: url("https://discord.com/assets/a4c4a23d67f9f4cb.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

svg.inboxIcon_ab6641 {
	display: none;
}

.headerTitle_ab6641 {
	background-image: url("https://discord.com/assets/a4c4a23d67f9f4cb.svg");
	background-size: 18px;
	background-position: left;
	background-repeat: no-repeat;
}

h1.inboxTitle_ab6641 {
	margin-left: 28px;
}

 /* Help Button */
a[href="https://support.discord.com"] svg>path {
	fill: #7289DA !important;
}

 /* DevTools */
.toolbar__9293f .buttons_8227b0 > div > .button__85643 svg, /* Old Title Bar */
.trailing_c38106 > div > .button__85643 svg {
	background-image: url("https://discord.com/assets/73763de9b2924904.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

 /* OldTitleBar Reload Button */
div[class^="toolbar"] svg>path[d^="M 21,10.875658 V 3 L 18.354245,5.6442048"] {
	fill: #A480E2;
}

 /* OldTitleBar Close Button */
div[class^="toolbar"] svg>path[d^="M 19.2,3 12,10.2"] {
	fill: #DA3E44;
}/*</Main Titlebar>*/

/* Tiny + on Invites/Events etc */
svg>path[d="M19 14a1 1 0 0 1 1 1v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3h-3a1 1 0 1 1 0-2h3v-3a1 1 0 0 1 1-1Z"],
svg>path[d="M19 14a1 1 0 0 1 1 1v3h3a1 1 0 0 1 0 2h-3v3a1 1 0 0 1-2 0v-3h-3a1 1 0 1 1 0-2h3v-3a1 1 0 0 1 1-1Z"] {
	fill: rgb(119, 178, 85);
}

/* BD Plugins/Themes */
svg.lucide-folder {
	fill: #ffa500;
}

svg.lucide-check {
	color: rgb(119, 178, 85) !important;
}

svg.lucide-x {
	color: #DA3E44 !important;
}

/* BD THemes Palette SVG */
.bd-addon-card svg.lucide-palette {
	background-image: url("https://discord.com/assets/44a7ec4589980427.svg");
	background-size: 20px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

/* BD Plugins Plug SVG */
.bd-addon-card svg.lucide-plug {
	background-image: url("https://discord.com/assets/c1af0f0ecbe918ce.svg");
	background-size: 20px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

/* Toolbar */
 /* Search */
.bd-search-wrapper>svg,
.icon__0f084>svg:has(path[d="M15.62 17.03a9 9 0 1 1 1.41-1.41l4.68 4.67a1 1 0 0 1-1.42 1.42l-4.67-4.68ZM17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"]),
.searchBar_c322aa svg.icon__0c4c4:not(.clear__0c4c4) {
	background-image: url("https://discord.com/assets/74f0a67afb481b21.svg");
	background-size: 16px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

.searchBar_c322aa svg.clear__0c4c4>path {
	fill: rgb(216, 58, 66);
}

 /* Threads */
.toolbar__9293f>.icon_d98031 {
	background-image: url("https://discord.com/assets/5f5b447d1ae0cba4.svg");
	background-size: 16px;
	background-position: center;
	background-repeat: no-repeat;
	transform: rotate(45deg);
	svg>path {
		display: none;
	}
}

.browser_d98031.container_d9c882 .header_d9c882 svg.threadIcon_d9c882 {
	background-image: url("https://discord.com/assets/5f5b447d1ae0cba4.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	transform: rotate(45deg);
	>path {
		display: none;
	}
}

 /* Notification Bell */
.toolbar__9293f>.iconWrapper__9293f:has(>svg>path[d^="M1.3 21.3a1 1 0 1 0 1.4 1.4l20-20a1"]) {
	background-image: url("https://discord.com/assets/ca750a2b73e36154.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	transform: scaleX(-1);
}

.toolbar__9293f>.iconWrapper__9293f>svg:has(>path[d^="M1.3 21.3a1 1 0 1 0 1.4 1.4l20-20a1"]) {
	display: none;
}

 /* Pinned Message */
.toolbar__9293f>.iconWrapper__9293f:has(>svg path[d^="M19.38 11.38a3 3 0 0 0 4.24 0l.03-.03a.5.5 0 0 0 0-.7L13.35.35a.5.5"]) {
	background-image: url("https://discord.com/assets/c7ba45651998dd2c.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
}

.toolbar__9293f>.iconWrapper__9293f>svg:has(path[d^="M19.38 11.38a3 3 0 0 0 4.24 0l.03-.03a.5.5 0 0 0 0-.7L13.35.35a.5.5"]) {
	display: none;
}

.messagesPopoutWrap_e8b59c>.header_e8b59c>.titleContainer_e8b59c {
	background-image: url("https://discord.com/assets/c7ba45651998dd2c.svg");
	background-size: 18px;
	background-position: left;
	background-repeat: no-repeat;
	>svg {
		display: none;
	}
}

.messagesPopoutWrap_e8b59c>.header_e8b59c>.titleContainer_e8b59c>div {
	margin-left: 28px;
}

 /* Show/Hide Member List */
.toolbar__9293f>.iconWrapper__9293f:has(>svg>path[d^="M14.5 8a3 3 0 1 0-2.7-4.3c-.2.4.06.86.44 1.12a5"]) {
	background-image: url("https://discord.com/assets/be8706c9515e4e6e.svg");
	background-size: 20px;
	background-position: center;
	background-repeat: no-repeat;
}

.toolbar__9293f>.iconWrapper__9293f>svg>path[d^="M14.5 8a3 3 0 1 0-2.7-4.3c-.2.4.06.86.44 1.12a5"] {
	display: none;
}

 /* Start Voice Call */
.toolbar__9293f>.iconWrapper__9293f>svg>path[d^="M2 7.4A5.4 5.4 0 0 1 7.4 2c.36 0 .7.22.83.55l1.93 4.64a1"],
.toolbar__9293f>.iconWrapper__9293f>svg>path[d="M13 7a1 1 0 0 1 1-1 4 4 0 0 1 4 4 1 1 0 1 1-2 0 2 2 0 0 0-2-2 1 1 0 0 1-1-1Z"] {
	fill: rgb(66, 162, 90);
}

 /* Start Video Call */
.toolbar__9293f>.iconWrapper__9293f:has(>svg>path[d^="M4 4a3 3 0 0 0-3 3v10a3"]) {
	background-image: url("https://discord.com/assets/d1612a30f6f75120.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
}

.toolbar__9293f>.iconWrapper__9293f>svg:has(>path[d^="M4 4a3 3 0 0 0-3 3v10a3"]) {
	display: none;
}

 /* Hide User Profile */
.toolbar__9293f>.iconWrapper__9293f>svg>path[d^="M23 12.38c-.02.38-.45.58-.78.4a6.97 6.97 0 0 0-6.27-.08.54.54"] {
	fill: #7289DA;
}

.toolbar__9293f>.iconWrapper__9293f.selected__9293f>svg path[d="M24 19a5 5 0 1 1-10 0 5 5 0 0 1 10 0Z"] {
	fill: #A48BE2;
}

 /* Friends List : New Group DM */
.inviteToolbar__133bf>.iconWrapper__9293f {
	background-image: url("https://discord.com/assets/e121c79c0d9d21e5.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	>svg>path[d^="M20.76 12.57c.4.3 1.23.13 1.24-.37V12a10"] {
		display: none;
	}
}/*</Toolbar>/

/* Avatar Wrapper - VC */
  /* Krisp */
.voiceButtonsContainer_e131a9>button:first-of-type svg g>path {
	fill: #ffa500 !important;
}

 /* Disconnect */
.voiceButtonsContainer_e131a9>button:not(:first-of-type) svg path {
	fill: var(--status-danger) !important;
}

 /* Server Channel List - Voice User Indicators */
.voiceUser__07f91 .iconGroup__07f91 svg {
	color: var(--status-danger);
}

 /*Ping */
.ping__06d62.largePing__06d62 path {
	fill: var(--status-online);
}/*</Avatar Wrapper - VC>*/

/* BetterFriendList - Friend Since */
.peopleListItem_cc6179 .actionButton_f8fa06>svg[name="Clock"] {
	background-image: url("https://discord.com/assets/4b5b72e2e8203486.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	>path {
		display: none;
	}
}

/* Friend List - "Message" */
.peopleListItem_cc6179 .actionButton_f8fa06:has(>svg>path[d="M12 22a10 10 0 1 0-8.45-4.64c.13.19.11.44-.04.61l-2.06 2.37A1 1 0 0 0 2.2 22H12Z"]) {
	background-image: url("https://discord.com/assets/e121c79c0d9d21e5.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
}

.peopleListItem_cc6179 .actionButton_f8fa06>svg>path[d="M12 22a10 10 0 1 0-8.45-4.64c.13.19.11.44-.04.61l-2.06 2.37A1 1 0 0 0 2.2 22H12Z"] {
	display: none;
}

/* Server Dropdown ----------------------------------------------------------------------------*/
 /* Server Boost */
#guild-header-popout-premium-subscribe svg path {
	fill: #FE73F9;
}

 /* Invite People */
#guild-header-popout-invite-people svg {
	background-image: url("https://discord.com/assets/5b12dce3a467ed97.svg");
	>path:first-of-type {
		display: none;
	}
}

 /* Create Channel */
#guild-header-popout-create-channel svg>path {
	fill: #43A25A;
}

 /* Create Category */
#guild-header-popout-create-category svg {
	background-image: url("https://discord.com/assets/edd480d5e90bc7c6.svg");
	>path {
		display: none;
	}
}

 /* Create Event */
#guild-header-popout-create-event svg {
	background-image: url("https://discord.com/assets/914d5f92720b2df3.svg");
	>path:nth-of-type(2), >path:nth-of-type(3) {
		display: none;
	}
}

 /* Active Threads */
#guild-header-popout-active-threads svg {
	background-image: url("https://discord.com/assets/5f5b447d1ae0cba4.svg");
	background-size: 16px;
	background-position: center;
	background-repeat: no-repeat;
	transform: rotate(45deg);
	>path {
		display: none;
	}
}

 /* App Directory */
#guild-header-popout-application-directory svg>path {
	fill: #43A25A;
	filter: hue-rotate(90deg);
}

/* Notifications */
#guild-header-popout-notifications svg {
	background-image: url("https://discord.com/assets/ca750a2b73e36154.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	transform: scaleX(-1);
	>path {
		display: none;
	}
}

 /* Privacy Settings */
#guild-header-popout-privacy svg {
	background-image: url("https://discord.com/assets/51cc7794c9a923de.svg");
	>path {
		display: none;
	}
}

/* Edit Server Profile */
#guild-header-popout-change-nickname svg {
	background-image: url("https://discord.com/assets/fe96ae6b8d6103d2.svg");
	background-size: 18px;
	background-position: center;
	background-repeat: no-repeat;
	transform: scaleX(-1);
	>path {
		display: none;
	}
}

/* Connections --------------------------------------------------------------------------------*/
 /* Steam */
button[style*="/assets/1f7ec18f3695d4cf.svg"] {
	background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg") !important;
}

img[class*="connectionIcon"][alt^="Steam"] {
	background: url("https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 30px;
	display: block;
	box-sizing: border-box;
	padding-left: 38px;
}

 /* Playstation */
div[id*="context-transfer-playstation"] .iconContainer_c1e9c4 {
	background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/4e/Playstation_logo_colour.svg");
	background-size: 24px;
	background-position: center;
	background-repeat: no-repeat;
	svg {
		display: none;
	}
}

button[style*="/assets/eed203a7ec517e23.svg"] {
	background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/4e/Playstation_logo_colour.svg") !important;
}

img[src="/assets/eed203a7ec517e23.svg"] {
	background: url("https://upload.wikimedia.org/wikipedia/commons/4/4e/Playstation_logo_colour.svg");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 32px;
	display: block;
	box-sizing: border-box;
	padding-left: 38px;
}

 /* Twitter */
button[style*="/assets/a61999ae9bfb9658.svg"] {
	background-image: url("https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg") !important;
}

img[src="/assets/a61999ae9bfb9658.svg"] {
	background: url("https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 32px;
	display: block;
	box-sizing: border-box;
	padding-left: 38px;
}

